# OrangePi_hexapod

./: .clang-format  .editorconfig  .gitignore  TODO.md  demo_motion.py  hexapod.service  install_ros2_jazzy.sh  install_service.sh  scripts.env  setup.sh  start_gait_demo.sh  start_hexapod.sh  start_motion_demo.sh  start_rviz.sh  start_teleop_rviz.sh  test_serial.sh  test_topics.sh  update.sh  update_hexapod.sh
.github/workflows/: ci.yml
src/crab_body_kinematics/: CMakeLists.txt  package.xml
src/crab_body_kinematics/src/: body_kinematics.cpp  body_kinematics.hpp
src/crab_description/: CMakeLists.txt  package.xml
src/crab_description/config/: robot_geometry.yaml
src/crab_description/launch/: demo_gait.launch.py  demo_real.launch.py  display_model.launch.py  gait_test.launch.py  hexapod.launch.py  robot.launch.py
src/crab_description/models/: crab_model.xacro
src/crab_description/rviz/: urdf.rviz
src/crab_description/scripts/: demo_gait.py
src/crab_gait/: CMakeLists.txt  package.xml
src/crab_gait/src/: gait.cpp  gait.hpp  gait_kinematics.cpp  gait_kinematics.hpp  gait_test_node.cpp
src/crab_imu/: CMakeLists.txt  package.xml
src/crab_imu/crab_imu/: CMakeLists.txt  package.xml
src/crab_imu/crab_imu/config/: fastdds.xml
src/crab_imu/crab_imu/src/sys/: I2C.cpp
src/crab_imu/src/: imu_control.cpp  imu_control.hpp
src/crab_imu/src/IMU/: DCM.cpp  DCM.h
src/crab_imu/src/sys/: I2C.cpp
src/crab_joint_publisher/: CMakeLists.txt  package.xml
src/crab_joint_publisher/src/: joint_publisher.cpp
src/crab_leg_kinematics/: CMakeLists.txt  package.xml
src/crab_leg_kinematics/src/: chainiksolvervel_pinv.cpp  chainiksolvervel_pinv.hpp  hp_chainiksolverpos_nr_jl.cpp  hp_chainiksolverpos_nr_jl.hpp  leg_ik_service.cpp  leg_ik_service.hpp  svd_HH.cpp  svd_HH.hpp
src/crab_maestro_controller/: CMakeLists.txt  package.xml
src/crab_maestro_controller/src/: controller_sub.cpp  controller_sub.hpp  maestro_joint_sub.cpp  maestro_leg_sub.cpp
src/crab_msgs/: CMakeLists.txt  package.xml
src/crab_msgs/msg/: LegIKRequest.msg  LegsJointsState.msg
src/crab_msgs/srv/: GetLegIKSolver.srv
src/crab_teleop_joy/: CMakeLists.txt  package.xml
src/crab_teleop_joy/src/: ds4_imu_publisher.cpp  teleop_joy.cpp  teleop_joy.hpp
src/maestro_driver/: CMakeLists.txt  package.xml
src/maestro_driver/src/: PolstroSerialInterface.cpp  PolstroSerialInterface.h  PolstroSerialInterfacePOSIX.cpp  PolstroSerialInterfacePOSIX.h  servo_node.cpp  servo_test_node.cpp
