<?xml version="1.0"?>
<package format="3">
  <name>crab_description</name>
  <version>0.0.1</version>
  <description>URDF description for crab hexapod robot (ROS 2)</description>

  <maintainer email="tuuzdu@todo.todo">tuuzdu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
