<?xml version="1.0"?>
<package format="3">
  <name>crab_leg_kinematics</name>
  <version>0.0.1</version>
  <description>Leg kinematics for crab hexapod robot (ROS 2)</description>

  <maintainer email="tuuzdu@todo.todo">tuuzdu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>crab_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
