<?xml version="1.0"?>
<package format="3">
  <name>maestro_driver</name>
  <version>0.0.1</version>
  <description>Pololu Maestro servo controller driver for ROS 2</description>

  <maintainer email="tuuzdu@todo.todo">tuuzdu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>crab_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
